[package]
name = "ez_audio"
version = "0.1.6"
authors = ["Axel Kappel <axel.e.kappel@gmail.com>"]
edition = "2018"
license = "MIT"
description = "🔊 A easy to use audio playback library"
keywords = ["audio", "multimedia"]
categories = ["multimedia::audio", "multimedia"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
